<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/first_name_sign_up_prompt"
        android:hint="@string/prompt_first_name_sign_up"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/last_name_sign_up_prompt"
        android:hint="@string/prompt_last_name_sign_up"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/first_name_sign_up_prompt"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prompt_country_sign_up"
        android:id="@+id/country_sign_up_message"
        android:layout_alignLeft="@id/last_name_sign_up_prompt"
        android:layout_alignStart="@id/last_name_sign_up_prompt"
        android:layout_marginTop="30dp"
        android:layout_below="@id/last_name_sign_up_prompt" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/country_spinner_sign_up_prompt"
        android:layout_below="@id/country_sign_up_message" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/next_personal_sign_up_button"
        android:text="@string/action_next"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp" />

</RelativeLayout>
